--- a/Admin/css/cmsui.css
+++ b/Admin/css/cmsui.css
@@ -26,17 +26,20 @@ body, html {
     
 }
 
-
 #editPanel *{
 /*    outline: 1px solid red;*/
     -webkit-user-select:none;
+}
+
+#editPanel *:not(.icon){
+    font-family:"Open Sans";
 }
 
 #editPanel #header {
     
     font-size:0.8em;
     color:white;
-    font-family:"Open sans";
+    
     margin:0px;
     padding:0px 10px;
     display:block;
@@ -74,7 +77,7 @@ body, html {
     border-left: 1px solid #4d4d4d;
     border-right: 1px solid #4d4d4d;
 /*    border-top:1px solid #6c6c6c;*/
-    border-bottom:1px solid #191919;
+    border-bottom:1px solid #1c1c1c;
 /*    background: -webkit-linear-gradient(#414141, #3e3e3e);*/
 }
 
@@ -99,7 +102,21 @@ body, html {
     padding:0px;
     list-style:none;
     padding:20px;
+    position:relative;
 }
+
+#editPanel #content #components span{
+    margin:0px;
+    padding:0px;
+    list-style:none;
+    font-size:20px;
+    line-height:20px;
+    display:block;
+    position:relative;
+/*    bottom:41px;*/
+/*    border:1px solid red;*/
+}
+
 
 #editPanel #content #components li {
     width:100px;
@@ -116,12 +133,15 @@ body, html {
     cursor:move;
 }
 
-#editPanel #content #components li#missing {
+#editPanel #content #components li:active {
+/*
     width:92px;
     height:92px;
-    display:inline-block;
-    border-radius:10px;
+*/
+    margin-top:-4px;
+    position:relative;
     border:4px dashed #2c2b2b;
+    box-sizing:border-box;
     background-color:#202020;
-    box-shadow:none;
+/*    box-shadow:none;*/
 }
