--- a/Admin/css/cmsui.css
+++ b/Admin/css/cmsui.css
@@ -18,17 +18,19 @@ body, html {
 }
 
 #editPanel {
-    position:absolute;
+    position:fixed;
     bottom:0px;
-    height:250px;
+    height:270px;
     width:100%;
     display:block;
+    -webkit-transition:0.5s;
     
 }
 
 #editPanel *{
 /*    outline: 1px solid red;*/
     -webkit-user-select:none;
+    
 }
 
 #editPanel *:not(.icon){
@@ -72,7 +74,7 @@ body, html {
     background-color:#2a2a2a;
 }
 
-#editPanel #header li#selected{
+#editPanel #header li.selected{
     background-color:#1c1c1c;
     border-left: 1px solid #4d4d4d;
     border-right: 1px solid #4d4d4d;
@@ -81,11 +83,38 @@ body, html {
 /*    background: -webkit-linear-gradient(#414141, #3e3e3e);*/
 }
 
-
 #editPanel #content {
-    height: 225px;
+    height: 250px;
     width: 100%;
     background-color:#1c1c1c;
+    overflow:hidden;
+    -webkit-transition:0.5s;
+}
+
+#editPanel #content *{
+/*    outline: 1px solid red;   */
+}
+
+#editPanel #content #overflow {
+/*    display:block;*/
+    width:500%;
+    height:100%;
+    list-style:none;
+    padding:0px;
+    margin:0px;
+    
+}
+
+#editPanel #content #inner{
+    width:100%;
+    overflow:none;
+    -webkit-transition:1s;
+}
+
+#editPanel #content #inner ul#overflow>li {
+    width:20%;
+    float:left;
+    display:inline-block;
 }
 
 #editPanel #header .divider {
@@ -102,7 +131,14 @@ body, html {
     padding:0px;
     list-style:none;
     padding:20px;
+/*    position:absolute;*/
+}
+
+#editPanel #content #filler{
     position:relative;
+    width:100%;
+    height:100%;
+    display:block;
 }
 
 #editPanel #content #components span{
@@ -121,6 +157,7 @@ body, html {
 #editPanel #content #components li {
     width:100px;
     height:100px;
+    margin: 2px 0px;
     display:inline-block;
     background-color:gray;
     box-shadow:0px 0px 8px black;
@@ -144,4 +181,13 @@ body, html {
     box-sizing:border-box;
     background-color:#202020;
 /*    box-shadow:none;*/
+}
+
+
+
+#editPanel #header>#toggle {
+    float:right;
+    line-height:25px;
+    cursor:pointer;
+    cursor:hand;
 }
