--- a/Admin/css/styles.css
+++ b/Admin/css/styles.css
@@ -45,6 +45,10 @@ html, body{
     -webkit-user-select:none;
 }
 
+.icon{
+    font-family:Icons;
+}
+
 .theme{
     border:1px solid white;
     border-bottom: #e5e5e5;
@@ -180,4 +184,80 @@ html, body{
     bottom:-30px;
     width:100%;
     left:0px;
+}
+
+#dashboard{
+    width:100%;
+    height:100%;
+    display:table;
+    margin:0px;
+    padding:0px;
+}
+
+#navPane {
+    padding:0px;
+    margin:0px;
+    width:200px;
+    height:100%;
+    list-style:none;
+    background-color: #303030;
+    display:inline-block;
+    border-right:1px solid black;
+/*    float:left;*/
+    display:table-cell;
+}
+
+#navPane>li:nth-child(1){
+    height:100px;
+    font-size:130px;
+    line-height:100px;
+    text-align:center;
+}
+
+#navPane>li{
+/*    display:table-cell;*/
+    height:50px;
+    line-height:50px;
+    text-align:right;
+    float:left;
+    cursor:pointer;
+    cursor:hand;
+    color:#acacac;
+    margin:0px;
+    padding:5%;
+    width:90%;
+
+    border-top: 1px solid #464646;
+    border-bottom: 1px solid black;
+    text-shadow: 0px -1px 0px black;
+}
+
+#navPane>li:hover{
+    background-color:#262626;
+    box-shadow:inset 0px 0px 4px black;
+    border:none;
+    text-shadow: none;
+}
+
+#navPane>li>span.icon{
+ 
+    font-size:30px;
+}
+
+#contentPane {
+    padding:0px;
+    margin:0px;
+    width:100%;
+    height:100%;
+    background-color: #303030;
+    display:inline-block;
+    float:left;
+    display:table-cell;
+    border-left:1px solid #464646;
+    overflow:hidden;
+}
+#contentPane>div{
+    width:100%;
+    height:100%;
+    padding:20px;
 }
